<resources>
    <string name="preferences_file_key">co.pilly.pillyclient.PREFERENCES_FILE_KEY</string>
    <string name="app_name">Pilly</string>
    <string name="login">Login</string>
    <string name="schedule">Schedule</string>
    <string name="status">Status</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="pills_left">pills left</string>
    <string name="recent_events">Recent events</string>
    <string name="s_medications">\'s medications</string>
    <string name="next_pill_min">Next pill in %1$d minutes</string>
    <string name="next_pill_hrs">Next pill in %1$d hours</string>
    <string name="next_pill_days">Next pill in %1$d days</string>
    <string name="next_pill_hr">Next pill in one hour</string>
    <string name="loading">Loading info. Please wait&#8230;</string>
    <string name="quantity">Pills to take: %1$d</string>
    <string name="remaining">Remaining: %1$d</string>
    <string name="pills_to_take">Pills to take</string>
    <string name="new_alarm">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="alert_saved">Alert saved</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_delete_confirm">Delete the selected alert?</string>
    <string name="monday_init">M</string>
    <string name="tuesday_init">T</string>
    <string name="wednesday_init">W</string>
    <string name="thursday_init">T</string>
    <string name="friday_init">F</string>
    <string name="saturday_init">S</string>
    <string name="sunday_init">S</string>
    <string name="no_days_selected">Please select at least one day</string>
    <string name="all_events">All events</string>
    <string name="no_schedule">No alerts scheduled.\nTap + to add one.</string>
    <string name="snooze">Snooze</string>
    <string name="net_error">Unable to retrieve user data.\nTap to try again.</string>
    <string name="no_connection">No connection detected. Check your settings.</string>
    <string name="no_next_pill">No alarms scheduled yet.</string>
    <string name="notification_title">Take your pills</string>
    <string name="notification_content">You still have to take %1$d pill(s).</string>
    <string name="overdose_title">Overdose detected!</string>
    <string name="overdose_body">The user overdosed by %1$d pill(s).</string>
    <string name="warning_snooze">Dismiss</string>
    <string name="overdose_description">Your Pilly has detected\nan overdose by %1$d pill(s).</string>
    <string name="pill_delta_label">%1$d</string>
    <string name="pill_count_label">%1$d pill(s) in the box.</string>
    <string name="minutes_from_schedule_label">%1$d</string>
</resources>
