<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@color/lightest">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32pt"
        android:text="@string/app_name"
        android:textColor="@color/darkest"
        android:textSize="35pt" />

    <TextView
        android:id="@+id/titleLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textColor="@color/dark"
        android:textSize="16pt" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLabel2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15pt"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3pt"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password"
        android:layout_marginTop="5pt"
        android:text="@string/remember_me" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25pt"
        android:onClick="login"
        android:text="@string/login"
        android:background="@drawable/login_button"
        android:textColor="@color/lightest"/>
</RelativeLayout>
