<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.pilly.pillyclient.NewAlert">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:subtitleTextColor="@color/lightest"
        app:titleTextColor="@color/lightest" />

    <TextView
        android:id="@+id/alert_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="12pt"
        android:layout_marginStart="12pt"
        android:layout_marginTop="8pt"
        android:onClick="changeAlertTime"
        android:text="00:00"
        android:textColor="@color/darkest"
        android:textSize="24pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alert_time_label"
        android:orientation="horizontal"
        android:padding="5pt">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_monday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/monday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/monday_init"
                android:textOn="@string/monday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_tuesday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/tuesday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/tuesday_init"
                android:textOn="@string/tuesday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_wednesday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/wednesday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/wednesday_init"
                android:textOn="@string/wednesday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_thursday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/thursday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/thursday_init"
                android:textOn="@string/thursday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_friday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/friday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/friday_init"
                android:textOn="@string/friday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_saturday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/saturday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/saturday_init"
                android:textOn="@string/saturday_init"
                android:textSize="10pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ToggleButton
                android:id="@+id/toggle_sunday"
                android:layout_width="20pt"
                android:layout_height="20pt"
                android:background="@drawable/weekday_togglebutton"
                android:text="@string/sunday_init"
                android:textColor="@color/darkest"
                android:textOff="@string/sunday_init"
                android:textOn="@string/sunday_init"
                android:textSize="10pt" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
