<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.pilly.pillyclient.AlarmScreen"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/pilly_alarm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30pt"
        android:text="@string/app_name"
        android:textColor="@color/light"
        android:textSize="35pt" />

    <TextView
        android:id="@+id/label_pills_to_take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pilly_alarm_label"
        android:layout_centerHorizontal="true"
        android:text="@string/pills_to_take"
        android:textColor="@color/light"
        android:textSize="14pt" />

    <TextView
        android:id="@+id/alarm_pillnr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_pills_to_take"
        android:layout_centerHorizontal="true"
        android:textSize="42pt"
        android:text=""
        android:textColor="@color/light"
        android:layout_marginTop="16pt"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snooze"
        android:id="@+id/snooze_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="16pt"
        android:paddingBottom="16pt"
        android:textSize="9pt"
        android:background="@color/dark"
        android:textColor="@color/light"
        android:onClick="snooze"/>
</RelativeLayout>
